Se agregan estilos y funcionalidad js

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preload" href="css/style.css" as="style">
+    <link rel="stylesheet" href="css/style.css">
     <title>Aplicación Responsiva</title>
 </head>
 <body>
     <header>
         <nav>
-            <ul>
+            <button id="menu-toggle">☰</button>
+            <ul id="menu">
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#servicios">Servicio</a></li>
                 <li><a href="#contacto">Contacto</a></li>
